src/main/kubernetes/prod/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/build-timestamp: 2024-01-15 - 15:43:05 +0000
  labels:
    app.kubernetes.io/name: opentour-quarkus
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: opentour-quarkus
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: opentour-quarkus
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/build-timestamp: 2024-01-15 - 15:43:05 +0000
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/name: opentour-quarkus
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: opentour-quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: opentour-quarkus
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: <<unknown>>
        app.quarkus.io/build-timestamp: 2024-01-15 - 15:43:05 +0000
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: opentour-quarkus
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
        - image: quay.io/rbaumgar/opentour-image:2.0
          imagePullPolicy: Always
          name: opentour-quarkus
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/build-timestamp: 2024-01-15 - 15:43:05 +0000
  labels:
    app.kubernetes.io/name: opentour-quarkus
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: opentour-quarkus
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: opentour-quarkus
